# android-emulator-container-scripts

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  LICENSE  MANIFEST.in  README.md  REGISTRY.MD  TROUBLESHOOTING.md  aemu-container.code-workspace  configure.sh  create_web_container.sh  emu_docker.py  emu_downloads_menu.py  emu_templates.py  pyproject.toml  run-in-script-example.sh  run-with-gpu.sh  run.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
cloud-init/: README.MD  cloud-init
emu/: _version.py  android_release_zip.py  cloud_build.py  docker_config.py  docker_device.py  emu_docker.py  emu_downloads_menu.py  emu_templates.py  platform_tools.py  process.py  template_writer.py  utils.py
emu/containers/: docker_container.py  emulator_container.py  progress_tracker.py  system_image_container.py
emu/generators/: base_docker.py  emulator_docker.py  system_image_docker.py
emu/templates/: Dockerfile  Dockerfile.emulator  Dockerfile.from_zip  Dockerfile.system_image  README.md  cloudbuild.README.MD  default.pa  emulator.README.MD  launch-emulator.sh  nodeconfig-android.json  registry.README.MD  supervisor.conf  wireless_autoconnect.sh  wireless_connect.sh
js/: .dockerignore  .gitignore  Makefile  README.md  config_gen.py  develop.sh  firebase_config.example.json  firebase_config.json  package-lock.json  package.json
js/develop/: Dockerfile  (+6 more)
tests/: conftest.py  test_docker_container.py  test_emu_downloads_menu.py  test_platform_tools.py  test_retrieve_emulators.py  test_retrieve_images.py  test_sysimg_info.py  test_template_writer.py
(+92 files in other folders)
